# BigInt-cpp

./: README.md  meson.build  meson_options.txt
include/: bigint.h  meson.build
src/: bigint.cpp  bigint_add.cpp  bigint_cmp.cpp  bigint_mul.cpp  bigint_op.cpp  bigint_sub.cpp  meson.build
tests/: meson.build  test_utils.cpp  test_utils.h
tests/add_tests/: add_tests.cpp  meson.build
tests/cmp_tests/: cmp_tests.cpp  meson.build
tests/init_tests/: init_tests.cpp  meson.build
tests/mul_tests/: meson.build  mul_tests.cpp
tests/sub_tests/: meson.build  sub_tests.cpp
